--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
         environment:
           POSTGRES_PASSWORD: test
           POSTGRES_USER: test
-          POSTGRES_DB: shop
+          POSTGRES_DB: shop_db
         volumes:
           - ./volumes/postgres/data:/var/lib/postgresql/data
 
