--- a/volumes/nginx/web.conf
+++ b/volumes/nginx/web.conf
@@ -6,12 +6,16 @@ server {
 	ssl_certificate_key    /shared/ssl/servidor.key;
 	
 	server_name _;
+	root   /var/www/public;
+#	root   /code/public;
+	index  index.php index.html;
 #	access_log /var/log/nginx/nginx.vhost.access.log;
 #	error_log /var/log/nginx/nginx.vhost.error.log;
-	location / {
-		root   /var/www/public;
-		index  index.php index.html;
-	}
+#	location / {
+#		root   /code/public;
+#		root   /var/www/public;
+#		index  index.php index.html;
+#	}
 
     location ~ \.php$ {
         try_files $uri =404;
