--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,58 @@
 version: '3'
 services:
     nginx_shop:
-        image: nginx
-        ports:
-          - "80:80"
-          - "443:443"
-        volumes:
-          - ./volumes/nginx/web.conf:/etc/nginx/conf.d/web.conf:ro
-          - ./volumes/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-#          - ./volumes/filterweb/:/code
-          - ./volumes/filterweb/:/var/www
-          - ./volumes/cert_ssl:/shared/ssl
-        links:
-          - php
+       image: nginx
+       ports:
+         - "80:80"
+         - "443:443"
+       volumes:
+         - ./volumes/nginx/web.conf:/etc/nginx/conf.d/web.conf:ro
+         - ./volumes/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+#         - ./volumes/filterweb/:/code
+         - ./volumes/filterweb/:/var/www
+         - ./volumes/cert_ssl:/shared/ssl
+       links:
+         - php
+       networks:
+         db_net:
+           ipv4_address: 10.24.1.4
 
     php:
 #       image: tripways/php-pgsql
 #       image: karllhughes/php-cli-postgres 
-       image: php:8.0.2-fpm
+#       image: php:8.0.2-fpm
 #       image: php:8.0.2-fpm-buster
 #       image: php:8.0.2-cli-buster
-#       build:
-#         context: dockerfiles
-#         dockerfile: phpfile
+       build:
+         context: dockerfiles
+         dockerfile: php
        volumes:
 #          - ./volumes/filterweb/:/code
           - ./volumes/filterweb/:/var/www
        links:
          - db
+       networks:
+         db_net:
+           ipv4_address: 10.24.1.3
 
     db:
-        image: postgres
-        restart: always
-        ports:
-           - target: 5432 # docker port
-             published: 5432 # published port
-             protocol: tcp
-        environment:
+       image: postgres
+#       restart: always
+       ports:
+          - target: 5432 # docker port
+            published: 5432 # published port
+            protocol: tcp
+       environment:
           POSTGRES_PASSWORD: test
           POSTGRES_USER: test
           POSTGRES_DB: shop_db
-        volumes:
-          - ./volumes/postgres/data:/var/lib/postgresql/data
+       volumes:
+         - ./volumes/postgres/data:/var/lib/postgresql/data
+       networks:
+         db_net:
+           ipv4_address: 10.24.1.2
+
+
 
     adminer:
         image: adminer
@@ -62,3 +73,11 @@ services:
 #          - ./volumes/sites-available/webstorm.conf:/etc/apache2/sites-available/000-default.conf:ro
 #        links:
 #          - 'db'
+
+networks:
+  db_net:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 10.24.1.0/24
+         gateway: 10.24.1.1
