--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
            ipv4_address: 10.24.1.3
 
     db:
-       image: postgres
+       image: postgres:13-alpine
 #       restart: always
        ports:
           - target: 5432 # docker port
@@ -47,6 +47,7 @@ services:
           POSTGRES_PASSWORD: test
           POSTGRES_USER: test
           POSTGRES_DB: shop_db
+          POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=scram-sha-256"
        volumes:
          - ./volumes/postgres/data:/var/lib/postgresql/data
        networks:
