--- a/volumes/nginx/web.conf
+++ b/volumes/nginx/web.conf
@@ -1,6 +1,6 @@
 server {
 
-	listen   443 ssl;
+	listen   443 ssl http2;
 
 	ssl_certificate    /shared/ssl/servidor.crt;
 	ssl_certificate_key    /shared/ssl/servidor.key;
