Added .env variables and moved files and directories

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 UID=1000
 GID=1000
+
+
+# Shop_Database
+
+#SHOP_DB_LOCATION="shop_db"
+BUILD_DATABASE_LIST="shop contact_form"
+SHOP_DATABASE_PASSWORD="test"
+SHOP_DATABASE_USER="test"
