--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,13 +49,13 @@ services:
              POSTGRES_PASSWORD: "${SHOP_DATABASE_PASSWORD}"
              POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=scram-sha-256"
              BUILD_DATABASE_LIST: "${BUILD_DATABASE_LIST}"
-#            volumes:
+            volumes:
 ##             - "./volumes/postgres/data:/var/lib/postgresql/data"
-#             - type: volume
-#               source: shop_db_volume
-#               target: /var/lib/postgresql/data
-#               volume:
-#                nocopy: false
+             - type: volume
+               source: shop_db_volume
+               target: /var/lib/postgresql/data
+               volume:
+                nocopy: false
             networks:
              - shop_net
            adminer:
