Fixed email behaviour on login when not having activated the account, now sends a activation email.

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 UID=1000
 GID=1000
+HOSTNAME="localhost"
 
+# Public_Web
+LOCAL_PUBLIC_WEB_PATH="./config/filterweb/"
 
 # Shop_Database
-
-#SHOP_DB_LOCATION="shop_db"
 BUILD_DATABASE_LIST="shop contact_form"
 SHOP_DATABASE_PASSWORD="test"
 SHOP_DATABASE_USER="test"
