--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             volumes:
              - "./config/nginx/web.conf:/etc/nginx/conf.d/web.conf:ro"
              - "./config/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
-             - "./config/filterweb/:/var/www"
+             - "${LOCAL_PUBLIC_WEB_PATH}:/var/www:ro"
              - "./config/cert_ssl:/shared/ssl"
             links:
              - php
@@ -21,15 +21,16 @@ services:
             build:
              context: dockerfiles
              dockerfile: php
-#            configs:
-#             - uid="${UID:-1000}"
-#             - gid="${GID:-1000}"
+            configs:
+             - uid="${UID:-1000}"
+             - gid="${GID:-1000}"
             image: filtershop/php
             volumes:
            #        - ./config/php/php.ini:/usr/local/etc/php/php.ini
-             - ./config/filterweb/:/var/www
+             - "${LOCAL_PUBLIC_WEB_PATH}:/var/www:rw"
             environment:
              SHOP_DB_LOCATION: "${SHOP_DB_LOCATION:-shop_db}"
+             HOSTNAME: "${HOSTNAME:-localhost}"
             links:
              - "${SHOP_DB_LOCATION:-shop_db}"
             networks:
@@ -64,10 +65,7 @@ services:
             ports:
              - 8080:8080
             links:
-             - shop_db
-#            external_links:
-#            external_links:
-#             -
+             - "${SHOP_DB_LOCATION:-shop_db}"
             networks:
              - shop_net
 networks:
