Things left: Script and DNS server.

--- a/.env
+++ b/.env
@@ -9,3 +9,15 @@ LOCAL_PUBLIC_WEB_PATH="./config/filterweb/"
 BUILD_DATABASE_LIST="shop contact_form"
 SHOP_DATABASE_PASSWORD="test"
 SHOP_DATABASE_USER="test"
+
+
+
+
+
+## SFTP RSYNC/BACKUP/CLIENT
+
+SFTPPORT=23
+SFTPUSER=docker_backups
+SFTPPASSWORD=a
+SFTPHOST=192.168.1.117
+SFTPREMOTE_DIR:/backups/
