Things left: Script and DNS server.

--- a/backup_server/docker-compose.yml
+++ b/backup_server/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
- sftp: # PORT 23
+ bakup_server: # PORT 23
   image: atmoz/sftp
   ports:
     - target: 22
@@ -8,17 +8,24 @@ services:
       protocol: tcp
       mode: host
   volumes:
-    - ./users.conf:/etc/sftp/users.conf:ro
+    # SSH connection keys
     - ./ssh_keys/ssh_host_rsa_key.pub:/etc/ssh/ssh_host_rsa_key.pub:ro
     - ./ssh_keys/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key:ro
     - ./ssh_keys/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key:ro
     - ./ssh_keys/ssh_host_ed25519_key.pub:/etc/ssh/ssh_host_ed25519_key.pub:ro
-    # SSH keys
+
+    # USERS
+    # User_list
+    - ./users.conf:/etc/sftp/users.conf:ro
+    # SSH authentication keys
     - ./user_ssh_keys/docker_backups.key.pub:/home/docker_backups/.ssh/authorized_keys:ro
-networks:
-  ssh_net:
-    driver: host
-    driver_opts:
-      parent: enp4s0
-    ipam:
-      driver: default
+#     Backup postgres volume
+#    - postgres_shop_backups_volume:/home/docker_backups/backups/postgres:rw
+    - type: volume
+      source: postgres_shop
+      target: /home/docker_backups/backups/postgres
+      volume:
+        nocopy: true
+volumes:
+  postgres_shop:
+    external: false
