--- a/backup_server/users.conf
+++ b/backup_server/users.conf
@@ -1,1 +1,1 @@
-docker_backups:$6$xyz$QdWnVhA9Jebjwi2.aD6Ly.KW69PwO5EGuibLjRJJD0W6WnB3HQvkGo583.VFK9X0vAjnP9YImpHqvDtuj2M.s/:e:::backups
+docker_backups:$6$xyz$QdWnVhA9Jebjwi2.aD6Ly.KW69PwO5EGuibLjRJJD0W6WnB3HQvkGo583.VFK9X0vAjnP9YImpHqvDtuj2M.s/:e:::backups,backups/postgres
