--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,17 +41,16 @@ services:
              context: Dockerfiles/postgresql
 #             args:
             image: filtershop/postgresql
-            ports:
-             - target: 5432 # docker port
-               published: 5432 # published port
-               protocol: tcp
+#            ports:
+#             - target: 5432 # docker port
+#               published: 5432 # published port
+#               protocol: tcp
             environment:
              POSTGRES_USER: "${SHOP_DATABASE_USER}"
              POSTGRES_PASSWORD: "${SHOP_DATABASE_PASSWORD}"
              POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=scram-sha-256"
              BUILD_DATABASE_LIST: "${BUILD_DATABASE_LIST}"
             volumes:
-##             - "./volumes/postgres/data:/var/lib/postgresql/data"
              - type: volume
                source: shop_db_volume
                target: /var/lib/postgresql/data
@@ -59,6 +58,7 @@ services:
                 nocopy: false
             networks:
              - shop_net
+
            adminer:
             image: adminer
             restart: always
@@ -66,6 +66,8 @@ services:
              - 8080:8080
             links:
              - "${SHOP_DB_LOCATION:-shop_db}"
+            environment:
+             ADMINER_DEFAULT_SERVER: "${SHOP_DB_LOCATION:-shop_db}"
             networks:
              - shop_net
 networks:
