--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,13 @@ services:
              - "./config/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
              - "${LOCAL_PUBLIC_WEB_PATH}:/var/www:ro"
              - "./config/cert_ssl:/shared/ssl"
-            links:
-             - php
+            deploy:
+             replicas: 1
+             restart_policy:
+              condition: on-failure
+            restart: on-failure
             depends_on:
-             - php
+              - php
             networks:
              - shop_net
 
@@ -21,12 +24,15 @@ services:
             build:
              context: Dockerfiles
              dockerfile: php
+            deploy:
+             replicas: 1
+             restart_policy:
+              condition: on-failure
             configs:
              - uid="${UID:-1000}"
              - gid="${GID:-1000}"
             image: filtershop/php
             volumes:
-           #        - ./config/php/php.ini:/usr/local/etc/php/php.ini
              - "${LOCAL_PUBLIC_WEB_PATH}:/var/www:rw"
             environment:
              SHOP_DB_LOCATION: "${SHOP_DB_LOCATION:-shop_db}"
@@ -39,12 +45,12 @@ services:
            shop_db:
             build:
              context: Dockerfiles/postgresql
-#             args:
             image: filtershop/postgresql
-#            ports:
-#             - target: 5432 # docker port
-#               published: 5432 # published port
-#               protocol: tcp
+            deploy:
+             replicas: 1
+             restart_policy:
+              condition: on-failure
+            restart: on-failure
             environment:
              POSTGRES_USER: "${SHOP_DATABASE_USER}"
              POSTGRES_PASSWORD: "${SHOP_DATABASE_PASSWORD}"
@@ -59,9 +65,28 @@ services:
             networks:
              - shop_net
 
+           portainer:
+            image: portainer/portainer-ce
+            ports:
+             - "9000:9000"
+            volumes:
+             - portainer_data:/data
+             - "/var/run/docker.sock:/var/run/docker.sock"
+            networks:
+             - agent_network
+            deploy:
+             mode: replicated
+             replicas: 1
+             placement:
+              constraints: [node.role == manager]
+
            adminer:
             image: adminer
-            restart: always
+            deploy:
+             replicas: 1
+             restart_policy:
+              condition: on-failure
+            restart: on-failure
             ports:
              - 8080:8080
             links:
@@ -70,7 +95,11 @@ services:
              ADMINER_DEFAULT_SERVER: "${SHOP_DB_LOCATION:-shop_db}"
             networks:
              - shop_net
+
 networks:
+  agent_network:
+   driver: overlay
+   attachable: true
   shop_net:
    driver: bridge
    ipam:
@@ -78,3 +107,4 @@ networks:
 volumes:
   shop_db_volume:
    external: false
+  portainer_data:
