Seventh backup.  Renamed a couple files and variables, also did a cleanup for unnecessary files.

--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ LOCAL_PUBLIC_WEB_PATH="./config/filterweb/"
 
 # Shop_Database
 BUILD_DATABASE_LIST="shop contact_form"
-SHOP_DATABASE_PASSWORD="test"
-SHOP_DATABASE_USER="test"
+DATABASE_PASSWORD="test"
+DATABASE_USER="test"
