--- a/backup_dealer-compose.yml
+++ b/backup_dealer-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  backup_client:
+  backup_dealer:
     build:
       context: Dockerfiles/backup_client
     image: tools/backup_client
@@ -12,9 +12,9 @@ services:
       PREFIX: ${PREFIX}
       VERBOSE: '' # Empty means false
     volumes:
-      - ./backup_server/user_ssh_keys/docker_backups.key:/root/.ssh/id_rsa:ro
-      - ./backup_server/user_ssh_keys/docker_backups.key.pub:/root/.ssh/id_rsa.pub:ro
-      - backup_volume:/master/:ro
+      - "./backup_server/user_ssh_keys/docker_backups.key:/root/.ssh/id_rsa:ro"
+      - "./backup_server/user_ssh_keys/docker_backups.key.pub:/root/.ssh/id_rsa.pub:ro"
+      - "backup_volume:/master/:ro"
 
 volumes:
   backup_volume:
