--- a/bkcli_env_folder/.env_bk_pg
+++ b/bkcli_env_folder/.env_bk_pg
@@ -6,5 +6,5 @@ SFTPPORT=23
 SFTPUSER=docker_backups
 SFTPHOST=192.168.1.117
 SFTPDIR=/backups/postgres
-PREFIX=postgres_shop_
-VOLUME_TO_BK=filterweb_shop_db_volume
+PREFIX=postgres_db_
+VOLUME_TO_BK=filterweb_postgresql_volume
