--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,12 +70,15 @@ services:
    volumes:
     - "portainer_data:/data"
     - "/var/run/docker.sock:/var/run/docker.sock"
-   networks:
-    - agent_network
    deploy:
+    restart_policy:
+     condition: on-failure
     mode: replicated
     placement:
      constraints: [node.role == manager]
+   restart: on-failure
+   networks:
+    - agent_network
 
   adminer:
    image: adminer
