--- a/config/nginx/web.conf
+++ b/config/nginx/web.conf
@@ -7,15 +7,9 @@ server {
 	
 	server_name _;
 	root   /var/www/public;
-#	root   /code/public;
 	index  index.php index.html;
-#	access_log /var/log/nginx/nginx.vhost.access.log;
-#	error_log /var/log/nginx/nginx.vhost.error.log;
-#	location / {
-#		root   /code/public;
-#		root   /var/www/public;
-#		index  index.php index.html;
-#	}
+	access_log /var/log/nginx/nginx.vhost.access.log;
+	error_log /var/log/nginx/nginx.vhost.error.log;
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -26,21 +20,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
-#	location /privatefolder {
-#		root   /var/www/admin; #?
-#		index  index.html;
-#
-#                allow 10.10.6.0/24;
-#                allow 127.0.0.1;
-#                deny  all;    
-#
-#                auth_basic           "Administrator’s Area";
-#                auth_basic_user_file /shared/users/passwd; 
-#                error_page 404 = /www/404.php;
-#
-#	}
-
-} 
+}
 
 
 # https://docs.nginx.com/nginx/admin-guide/security-controls/configuring-http-basic-authentication/
