--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     - "80:80"
     - "443:443"
    volumes:
+    - "nginx_logs:/var/log/nginx:rw"
     - "./config/nginx/web.conf:/etc/nginx/conf.d/web.conf:ro"
     - "./config/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
     - "${LOCAL_PUBLIC_WEB_PATH}:/var/www:ro"
@@ -105,3 +106,4 @@ volumes:
   postgresql_volume:
    external: false
   portainer_data:
+  nginx_logs:
