--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
+# PHP
 UID=1000
 GID=1000
 HOSTNAME="localhost"
 
-# Public_Web
+# Nginx
 LOCAL_PUBLIC_WEB_PATH="./config/filterweb/"
 
-# Shop_Database
+# PostgresDB
 BUILD_DATABASE_LIST="shop contact_form"
 DATABASE_PASSWORD="test"
 DATABASE_USER="test"
