--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
+#.env
 # PHP
 UID=1000
 GID=1000
-HOSTNAME="filter.house"
+HOSTNAME="localhost"
 
 # Nginx
 LOCAL_PUBLIC_WEB_PATH="./config/filterweb/"
