--- a/bkcli_env_folder/.env_bk_pg
+++ b/bkcli_env_folder/.env_bk_pg
@@ -1,10 +1,7 @@
-# Envoirment file used to backup the postgres_shop volume
-
-## SFTP RSYNC/BACKUP/CLIENT
-
-SFTPPORT=23
-SFTPUSER=docker_backups
-SFTPHOST=192.168.1.117
-SFTPDIR=/backups/postgres
-PREFIX=postgres_db_
-VOLUME_TO_BK=filterweb_postgresql_volume
+#./bkcli_env_folder/env_bk_pg
+SFTPPORT="23"
+SFTPUSER="docker_backups"
+SFTPHOST="backup_server.net"
+SFTPDIR="/backups/postgres"
+PREFIX="postgres_db_"
+VOLUME_TO_BK="filterweb_postgresql_volume"
